--- a/CISC3610/Form/index.html
+++ b/CISC3610/Form/index.html
@@ -65,7 +65,7 @@
    
     <form name="form" id = "form"> <a href="https://parkjaeyi.github.io/CISC3610/HomePage.html" style="font-size:20px">HomePage</a>
         <div id="formbody">
-            <h1>Conversion Form</h1>
+            <h1>Conversion</h1>
           
         <!--the "name" attribute is very important. It indicates the group its in-->
            
