--- a/CISC3610/HomePage.html
+++ b/CISC3610/HomePage.html
@@ -11,7 +11,7 @@
         <b><a href="https://parkjaeyi.github.io/CISC3610/CartoonProj/">Cartoon Project</a></b><br>
         <br>
 
-        <b><a href="https://parkjaeyi.github.io/CISC3610/JSON/">JSON HW</a></b> 
+        <b><a href="https://parkjaeyi.github.io/CISC3610/JSON/">JSON Graph Proj</a></b> 
         <br>
         <br>
         <b><a href="https://parkjaeyi.github.io/CISC3610/Form/">Conversion Form Project</a></b>
